--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="calculator">
             <input type="text" placeholder="0"  id="output-screen">
             <button onclick="display('%')">%</button>
-            <button onclick="">CE</button>
             <button onclick="clearScreen()">C</button>
             <button onclick="del()">DEL</button>
+            <button onclick="display('/')">/</button>
             <button onclick="display('7')">7</button>
             <button onclick="display('8')">8</button>
             <button onclick="display('9')">9</button>
@@ -27,7 +27,7 @@
             <button onclick="display('2')">2</button>
             <button onclick="display('3')">3</button>
             <button onclick="display('+')">+</button>
-            <button onclick="display('/')">/</button>
+            <button onclick="display('00')">00</button>
             <button onclick="display('0')">0</button>
             <button onclick="display('.')">.</button>
             <button onclick="calculate()" class="equal">=</button>
