--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-     <link rel="stylesheet" href="style.css">
-     <script src="script.js"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+  </head>
+  <body>
     <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
-   <h1 id="title"><center>Calculator</center></h1>
-   <p id="description">A calculator is a device that performs arithmetic operations on numbers. Basic calculators can do only addition, subtraction, multiplication and division mathematical calculation </p>
+    <h1 id="title"><center>Calculator</center></h1>
+    <p id="description">
+      A calculator is a device that performs arithmetic operations on numbers.
+      Basic calculators can do only addition, subtraction, multiplication and
+      division mathematical calculation
+    </p>
+     <p id="memory">Memory: 0</p>
     <div class="container">
-        <div class="calculator">
-            <input type="text" placeholder="0"  id="result">
-            <button onclick="display('%')">%</button>
-            <button id="clear" onclick="clearScreen()">C</button>
-            <button onclick="del()">DEL</button>
-            <button  onclick="display('/')">/</button>
-            <button onclick="display('7')">7</button>
-            <button onclick="display('8')">8</button>
-            <button onclick="display('9')">9</button>
-            <button onclick="display('*')">X</button>
-            <button onclick="display('4')">4</button>
-            <button onclick="display('5')">5</button>
-            <button onclick="display('6')">6</button>
-            <button id="subtract" onclick="display('-')">-</button>
-            <button onclick="display('1')">1</button>
-            <button onclick="display('2')">2</button>
-            <button onclick="display('3')">3</button>
-            <button id="add" onclick="display('+')">+</button>
-            <button onclick="display('00')">00</button>
-            <button onclick="display('0')">0</button>
-            <button onclick="display('.')">.</button>
-            <button onclick="calculate()" id="equal">=</button>
-                        
-
-        </div>
+      <div class="calculator">
+        <input type="text" placeholder="0" id="result" />
+        <button id="ms">MS</button>
+        <button id="mplus">M+</button>
+        <button id="mminus">M-</button>
+        <button id="mc">MC</button>
+        <button onclick="display('%')">%</button>
+        <button id="clear" onclick="clearScreen()">C</button>
+        <button onclick="del()">DEL</button>
+        <button onclick="display('/')">/</button>
+        <button id="7" onclick="display('7')">7</button>
+        <button id="8" onclick="display('8')">8</button>
+        <button id="9" onclick="display('9')">9</button>
+        <button onclick="display('*')">X</button>
+        <button id="4" onclick="display('4')">4</button>
+        <button id="5" onclick="display('5')">5</button>
+        <button id="6" onclick="display('6')">6</button>
+        <button id="subtract" onclick="display('-')">-</button>
+        <button id="1" onclick="display('1')">1</button>
+        <button id="2" onclick="display('2')">2</button>
+        <button id="3" onclick="display('3')">3</button>
+        <button id="add" onclick="display('+')">+</button>
+        <button id="00" onclick="display('00')">00</button>
+        <button id="0" onclick="display('0')">0</button>
+        <button onclick="display('.')">.</button>
+        <button onclick="calculate()" id="equal">=</button>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
