center tag removed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
     <h1 id="title"><center>Calculator</center></h1>
-    <p id="description"><center></center>
+    <p id="description">
       A calculator is a device that performs arithmetic operations on numbers.
       Basic calculators can do only addition, subtraction, multiplication and
       division mathematical calculation
